# readmission-risk-xgboost

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mlflow.db  pyproject.toml  streamlit_app.py
config/: config.yaml
docs/: architecture.md
docs/specs/: 2026-06-25-readmission-risk-design.md
models/: metadata.json
notebooks/: 01_eda.ipynb
reports/: MODEL_CARD.md  fairness.csv  metrics.json
reports/figures/: lime_example.html
src/readmission/: __init__.py  config.py  data.py  evaluate.py  explain.py  features.py  model_card.py  train.py
src/readmission/api/: main.py  schemas.py
tests/: test_api.py  test_config.py  test_data.py  test_evaluate.py  test_explain.py  test_features.py  test_model_card.py  test_smoke.py
